Fixed layout bug where footer didn't display at bottom

--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -5,13 +5,20 @@ body {
 // body {
 //   background-color: #fdfdf4 !important;
 // }
+// body {
+//   display: flex;
+//   flex-direction: column;
+// }
 #root {
   display: flex;
   flex-direction: column;
   height: 100%;
 }
-section.container {
+.container {
   flex: 1 0 auto;
+}
+footer {
+  flex-shrink: 0;
 }
 h1 {
   font-family: $main-font;
