--- a/src/styles/pages/register.scss
+++ b/src/styles/pages/register.scss
@@ -17,6 +17,7 @@ form {
     color: #000;
     font-size: 0.9rem;
     border-radius: 0;
+    border: 1px solid #e5e5e5;
   }
   label.form-check-label {
     font-size: 0.8rem;
